# LR7

./: Task1.cpp
Task_1/: Task1.cpp
Task_1/address/: CMakeLists.txt
Task_1/thread/: CMakeLists.txt
Task_2/: Task2.cpp
Task_2/address/: CMakeLists.txt
Task_2/thread/: CMakeLists.txt
Task_3/: Task3.cpp
Task_3/address/: CMakeLists.txt
Task_3/thread/: CMakeLists.txt
Task_4/: Task4.cpp
Task_4/address/: CMakeLists.txt
Task_4/thread/: CMakeLists.txt
Task_5/: Task5.cpp
Task_5/address/: CMakeLists.txt
Task_5/thread/: CMakeLists.txt
source/: functions.cpp  header.h
